<resources>
    <string name="app_name">MyML</string>
    <string name="img_logo">logoML</string>
    <string name="et_buscar">Buscar...</string>
    <string name="btn_buscar">Buscar</string>
    <string name="txt_resultado_buscar">Resultado de la busqueda:</string>
    <string name="txt_titulo">Cargando...</string>
    <string name="signo">$&#160;</string>
    <string name="precio"></string>
</resources>
