<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SerchActivity">

    <EditText
        android:id="@+id/et_buscar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageViewML"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="51dp"
        android:hint="@string/et_buscar" />

    <ImageView
        android:id="@+id/imageViewML"
        android:layout_width="300dp"
        android:layout_height="293dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="67dp"
        android:contentDescription="@string/img_logo"
        app:srcCompat="@drawable/mercadolibre1" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_buscar"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="30dp"
        android:onClick="Buscar"
        android:text="@string/btn_buscar" />

</RelativeLayout>